--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
+    "ng2-charts": "^4.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0-rc.1",
     "rxjs": "~7.5.0",
