--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
     "ng2-charts": "^4.0.0",
+    "ngx-spinner": "^14.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0-rc.1",
     "rxjs": "~7.5.0",
