--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^14.0.0",
     "bootstrap": "^5.1.3",
     "ng2-charts": "^4.0.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "ngx-spinner": "^14.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0-rc.1",
