--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.2",
     "ngx-spinner": "^14.0.0",
+    "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0-rc.1",
     "rxjs": "~7.5.0",
